<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home"/>

        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/history"/>
        <item
                android:id="@+id/nav_download"
                android:icon="@drawable/ic_download"
                android:title="@string/download"/>
        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting"/>
    </group>

</menu>
